CWrapper/Window/Window.h

typedef struct LunaWindowHandle
{
    luna_handle_t object;
    void* iwindow;
} LunaWindowHandle;
typedef struct LunaWindowRectI
{
    int32_t offset_x;
    int32_t offset_y;
    int32_t width;
    int32_t height;
} LunaWindowRectI;
LUNA_WINDOW_C_API luna_errcode_t luna_window_event_get_window(luna_handle_t event_object, LunaWindowHandle* out_window);
LUNA_WINDOW_C_API int32_t luna_window_request_close_event_get_do_close(luna_handle_t event_object);
LUNA_WINDOW_C_API void luna_window_request_close_event_set_do_close(luna_handle_t event_object, int32_t do_close);
LUNA_WINDOW_C_API void luna_window_resize_event_get_size(luna_handle_t event_object, uint32_t* out_width, uint32_t* out_height);
LUNA_WINDOW_C_API void luna_window_framebuffer_resize_event_get_size(luna_handle_t event_object, uint32_t* out_width, uint32_t* out_height);
LUNA_WINDOW_C_API void luna_window_move_event_get_position(luna_handle_t event_object, int32_t* out_x, int32_t* out_y);
LUNA_WINDOW_C_API uint32_t luna_window_key_down_event_get_key(luna_handle_t event_object);
LUNA_WINDOW_C_API uint32_t luna_window_key_up_event_get_key(luna_handle_t event_object);
LUNA_WINDOW_C_API const char* luna_window_input_text_event_get_text(luna_handle_t event_object);
LUNA_WINDOW_C_API void luna_window_mouse_move_event_get_position(luna_handle_t event_object, int32_t* out_x, int32_t* out_y);
LUNA_WINDOW_C_API uint32_t luna_window_mouse_down_event_get_button(luna_handle_t event_object);
LUNA_WINDOW_C_API uint32_t luna_window_mouse_up_event_get_button(luna_handle_t event_object);
LUNA_WINDOW_C_API void luna_window_scroll_event_get_delta(luna_handle_t event_object, float* out_x, float* out_y);
LUNA_WINDOW_C_API void luna_window_touch_down_event_get_point(luna_handle_t event_object, uint64_t* out_id, float* out_x, float* out_y);
LUNA_WINDOW_C_API void luna_window_touch_move_event_get_point(luna_handle_t event_object, uint64_t* out_id, float* out_x, float* out_y);
LUNA_WINDOW_C_API void luna_window_touch_up_event_get_point(luna_handle_t event_object, uint64_t* out_id, float* out_x, float* out_y);
LUNA_WINDOW_C_API uint64_t luna_window_drop_files_event_get_file_count(luna_handle_t event_object);
LUNA_WINDOW_C_API const char* luna_window_drop_files_event_get_file(luna_handle_t event_object, uint64_t index);
LUNA_WINDOW_C_API void luna_window_drop_files_event_get_position(luna_handle_t event_object, float* out_x, float* out_y);
LUNA_WINDOW_C_API void luna_window_iwindow_close(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_is_closed(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_has_input_focus(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_has_mouse_focus(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_is_minimized(void* self);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_foreground(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_is_maximized(void* self);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_minimized(void* self);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_maximized(void* self);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_restored(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_is_hovered(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_is_visible(void* self);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_visible(void* self, int32_t visible);
LUNA_WINDOW_C_API uint32_t luna_window_iwindow_get_style(void* self);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_style(void* self, uint32_t style);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_title(void* self, const char* title);
LUNA_WINDOW_C_API void luna_window_iwindow_get_position(void* self, int32_t* out_x, int32_t* out_y);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_position(void* self, int32_t x, int32_t y);
LUNA_WINDOW_C_API void luna_window_iwindow_get_size(void* self, uint32_t* out_width, uint32_t* out_height);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_size(void* self, uint32_t width, uint32_t height);
LUNA_WINDOW_C_API void luna_window_iwindow_get_framebuffer_size(void* self, uint32_t* out_width, uint32_t* out_height);
LUNA_WINDOW_C_API float luna_window_iwindow_get_dpi_scale_factor(void* self);
LUNA_WINDOW_C_API void luna_window_iwindow_screen_to_client(void* self, int32_t x, int32_t y, int32_t* out_x, int32_t* out_y);
LUNA_WINDOW_C_API void luna_window_iwindow_client_to_screen(void* self, int32_t x, int32_t y, int32_t* out_x, int32_t* out_y);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_begin_text_input(void* self);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_set_text_input_area(void* self, const LunaWindowRectI* input_rect, int32_t cursor);
LUNA_WINDOW_C_API luna_errcode_t luna_window_iwindow_end_text_input(void* self);
LUNA_WINDOW_C_API int32_t luna_window_iwindow_is_text_input_active(void* self);