Managed/Window/Internal/Generated/WindowNativeGenerated.g.cs


    [DllImport("LunaWindowC", EntryPoint = "luna_window_event_get_window", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr EventGetWindow(IntPtr eventObject, out NativeWindowHandle outWindow);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_request_close_event_get_do_close", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int RequestCloseEventGetDoClose(IntPtr eventObject);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_request_close_event_set_do_close", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void RequestCloseEventSetDoClose(IntPtr eventObject, int doClose);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_resize_event_get_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void ResizeEventGetSize(IntPtr eventObject, out uint outWidth, out uint outHeight);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_framebuffer_resize_event_get_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FramebufferResizeEventGetSize(IntPtr eventObject, out uint outWidth, out uint outHeight);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_move_event_get_position", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void MoveEventGetPosition(IntPtr eventObject, out int outX, out int outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_key_down_event_get_key", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint KeyDownEventGetKey(IntPtr eventObject);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_key_up_event_get_key", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint KeyUpEventGetKey(IntPtr eventObject);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_input_text_event_get_text", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr InputTextEventGetText(IntPtr eventObject);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_mouse_move_event_get_position", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void MouseMoveEventGetPosition(IntPtr eventObject, out int outX, out int outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_mouse_down_event_get_button", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint MouseDownEventGetButton(IntPtr eventObject);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_mouse_up_event_get_button", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint MouseUpEventGetButton(IntPtr eventObject);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_scroll_event_get_delta", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void ScrollEventGetDelta(IntPtr eventObject, out float outX, out float outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_touch_down_event_get_point", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void TouchDownEventGetPoint(IntPtr eventObject, out ulong outId, out float outX, out float outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_touch_move_event_get_point", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void TouchMoveEventGetPoint(IntPtr eventObject, out ulong outId, out float outX, out float outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_touch_up_event_get_point", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void TouchUpEventGetPoint(IntPtr eventObject, out ulong outId, out float outX, out float outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_drop_files_event_get_file_count", CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong DropFilesEventGetFileCount(IntPtr eventObject);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_drop_files_event_get_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr DropFilesEventGetFile(IntPtr eventObject, ulong index);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_drop_files_event_get_position", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void DropFilesEventGetPosition(IntPtr eventObject, out float outX, out float outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_close", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IwindowClose(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_is_closed", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowIsClosed(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_has_input_focus", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowHasInputFocus(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_has_mouse_focus", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowHasMouseFocus(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_is_minimized", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowIsMinimized(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_foreground", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetForeground(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_is_maximized", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowIsMaximized(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_minimized", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetMinimized(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_maximized", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetMaximized(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_restored", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetRestored(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_is_hovered", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowIsHovered(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_is_visible", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowIsVisible(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_visible", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetVisible(IntPtr self, int visible);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_get_style", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint IwindowGetStyle(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_style", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetStyle(IntPtr self, uint style);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_title", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetTitle(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string title);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_get_position", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IwindowGetPosition(IntPtr self, out int outX, out int outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_position", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetPosition(IntPtr self, int x, int y);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_get_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IwindowGetSize(IntPtr self, out uint outWidth, out uint outHeight);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetSize(IntPtr self, uint width, uint height);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_get_framebuffer_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IwindowGetFramebufferSize(IntPtr self, out uint outWidth, out uint outHeight);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_get_dpi_scale_factor", CallingConvention = CallingConvention.Cdecl)]
    internal static extern float IwindowGetDpiScaleFactor(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_screen_to_client", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IwindowScreenToClient(IntPtr self, int x, int y, out int outX, out int outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_client_to_screen", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void IwindowClientToScreen(IntPtr self, int x, int y, out int outX, out int outY);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_begin_text_input", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowBeginTextInput(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_set_text_input_area", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowSetTextInputArea(IntPtr self, in global::Luna.Window.RectI inputRect, int cursor);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_end_text_input", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr IwindowEndTextInput(IntPtr self);

    [DllImport("LunaWindowC", EntryPoint = "luna_window_iwindow_is_text_input_active", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int IwindowIsTextInputActive(IntPtr self);

}
